# jackal_minefield_simulator

./: README.md
jackal_gazebo/: CMakeLists.txt  hratc.rviz  package.xml
jackal_gazebo/description/urdf/: hokuyo.urdf.xacro  pioneer3at.urdf  pioneer3at.urdf.xacro
jackal_gazebo/description/worlds/: area_desert.dem  area_desert.world  area_desert_129.dem  area_desert_30.dem  border.world  border_clip.dem  border_clip_129.dem  coordinates.yaml  flatMinefield.world
jackal_gazebo/launch/: area-desert.launch  desert.launch  minefield.launch  world-park.launch
jackal_gazebo/model/: README.md
jackal_gazebo/model/gazebo/: Bridge.urdf.xacro
jackal_gazebo/model/gazebo/meshes/: Box.STL  Hokuyo_joint.STL  Hokuyo_support.STL  Laser_support.STL  Left_wall.STL  Right_wall.STL  Top_wall.STL  bridge.STL
jackal_gazebo/model/solidWorks/: Aboboda.SLDPRT  Caixa.SLDPRT  Cavalete-Impressão.AI  Cavalete-Impressão.SLDASM  Lateral.SLDPRT  Plataforma.SLDPRT  SuporteFrontal.SLDPRT  Suporte_Hokuyo.SLDASM
jackal_gazebo/model/solidWorks/Suporte_Hokuyo/: Conjunto.SLDASM  Suporte.SLDPRT  Suporte2.SLDPRT  sw.txt
jackal_gazebo/settings/: GPScoordinates.yaml  minefield.yaml
jackal_gazebo/src/coilSignalSimulator/: CoilSignalSimulator.cpp
jackal_gazebo/src/config/: robotPose.cpp  robotPose.h
jackal_gazebo/src/gps_to_odom/: gps_to_odom.cpp
jackal_gazebo/src/judge/: judge.cpp
jackal_gazebo/src/minefieldViewer/: minefieldviewer.cpp
