<?xml version="1.0"?>
<package>
  <name>jackal_gazebo</name>
  <version>0.3.0</version>
  <description>Launchfiles to use Jackal in Gazebo.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jackal_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  
  <!-- From HRATC-->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>metal_detector_msgs</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend version_gte="0.5">jackal_control</run_depend>
  <run_depend version_gte="0.5">jackal_description</run_depend>

  <!-- From HRATC-->
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>metal_detector_msgs</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
